* 2016.01.11 - * fixing remote repo recaching if selecting different public CK server
                 during program optimization crowdsourcing

* 2016.01.04 - * adding 'show' function to platform.* to list all platforms 
                 participating in crowd-tuning and their parameters

* 2016.01.03 - * fixing exchange of information during crowd-tuning
                 (possiblity to find platform description in all repos)
               * adding possibility to identify user when recording
                 results during crowdtuning

* 2016.01.02 - * fixing GPU/accelerator detection for ARM/Qualcomm (for crowdtuning)
               * fixing platform name detection (to crowdsource optimization)

* 2015.12.19 - * adding env var CK_PLATFORM_INIT_UOA to automatically 
                 add platform scripts to PATH when dealing with CPU/GPU frequency

* 2015.12.14 - * fixing soft:lib.opencl.mali compilation for Android
               * added /data/local/tmp/lib to LD_LIBRARY_PATH when 
                 benchmarking/running/autotuning/crowdtuning on Android 
                 (to copy there development libs for dynamic apps
                  while keeping directory clean)

* 2015.11.21 - * adding "batch_exit" : "exit /b $#return_code#$" to Windows and MingW OS descriptions

* 2015.11.20 - * improving OpenCL lib setup on Ubuntu

* 2015.11.09 - * extending soft:compiler.llvm - adding tool_postfix, for example -3.6 for clang-3.6

* 2015.10.29 - * adding env "CK_COMPILER_FLAG_MFLOAT_ABI_HARD": "-mfloat-abi=hard" to LLVM

* 2015.10.28 - * when automatically installing packages, add not only 'compiler' to dir name,
                 but also 'support_compiler' ...
               * changing 'compiler' to 'source-to-source-compiler' tag for pencilcc

* 2015.10.27 - * if more than one package avaliable, allow selection
               * fixing bug with compiler dependencies when installing packages
               * fixing pencil deps
